<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/cardListFragment">

    <fragment
        android:id="@+id/cardListFragment"
        android:name="com.mreigar.cardwalletapp.cardlist.CardListFragment"
        android:label="@string/card_list_title">

        <action
            android:id="@+id/action_add_card"
            app:destination="@id/addCardFragment"
            app:popUpTo="@id/cardListFragment" />
    </fragment>

    <fragment
        android:id="@+id/addCardFragment"
        android:name="com.mreigar.cardwalletapp.addcard.AddCardFragment"
        android:label="@string/add_card_title">

        <action
            android:id="@+id/action_scan_card"
            app:destination="@id/scanCardFragment"
            app:popUpTo="@id/addCardFragment" />
    </fragment>

    <fragment
        android:id="@+id/scanCardFragment"
        android:name="com.mreigar.cardwalletapp.addcard.ScanCardFragment"
        android:label="@string/scan_card_title" />
</navigation>